# research-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.toml  main.py  pyproject.toml  run_infra_scenario.py
bots/api/: core.py  datanode.py  helpers.py  http.py  types.py
bots/cli/: wallet.py
bots/config/: config.py  devops_scenarios.py  environment.py  network.py  types.py
bots/flask/: traders_handler.py
bots/http/: app.py  handler.py  traders_handler.py
bots/services/: decorators.py  healthcheck.py  multiprocessing.py  scenario.py  service.py  traders.py  vega_wallet.py
bots/state/: application.py
bots/tools/: github.py
bots/vega_sim/: network.py  scenario_wallet.py  wallet.py
bots/wallet/: cli.py  scenario_wallet.py  state.py
