[tool.poetry]
name = "bots"
version = "0.1.0"
description = ""
authors = ["ops <ops@vega.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
# https://python-poetry.org/docs/dependency-specification/#git-dependencies
vega_sim = { git = "https://github.com/vegaprotocol/vega-market-sim.git", rev = "8d293c468055289493b300e91312aede13a2debc" }
# vega_sim = { path = "../vega-market-sim", develop = true }
flask = "^2.3.3"
waitress = "^2.1.2"
pypprof = "0.0.1"
websocket-client = "^1.7.0"
grpcio-tools = "^1.60.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
