[tool.poetry]
name = "bots"
version = "0.1.0"
description = ""
authors = ["ops <ops@vega.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
# https://python-poetry.org/docs/dependency-specification/#git-dependencies
vega_sim = { git = "https://github.com/vegaprotocol/vega-market-sim.git", rev = "b01c2010f18f54eab8e96d9bdad5390ced0fe6c4" }
# vega_sim = { path = "../vega-market-sim", develop = true }
flask = "^2.3.3"
waitress = "^2.1.2"
pypprof = "0.0.1"
grpcio-tools = "^1.60.0"
protobuf="^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
